2002-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagram.py: moved to the UML module.
	* gaphor/misc/storage.py: now contains the load and save methods of
	ElementFactory.

2002-03-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* */Makefile.am: fized path for make install
	* gaphor/UML/*.py: made all files lower case.
	* gaphor/UML/elementfactory.py: New file. Factory for creating model
	elements.
	* gaphor/misc/: New directory. Added Makefile.am, singleton.py and
	command.py.
	* gaphor/UML/element.py: put Enumeration_ and Sequence in separate
	files.
	* configure.in: Added dependency for libxml2.
	* doc/gaphor.dtd: New file. DTD for gaphor files.
	* gaphor/UML/elementfactory.py, gaphor/UML/element.py,
	gaphor/diagram/diagram.py, gaphor/diagram/itemstorage.py:
	Use libxml2 calls rather than xmllib (which is depricated anyway).

2002-03-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/relationship.c: (relationship_handle_connect)
	Check if the currently connected subject can be used to set the subject.
	* gaphor/UML/__init__.py: Make dependencies only can connect to 1
	model element.

2002-02-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* utils/genUML.py: Changed to make use of the aggregation attribute.
	* gaphor/UML/Element.py: Backup the internal dictionary if no
	presentations are attached to the item.
	* gaphor/UML/__init__.py: Added changes for new genUML.py script.
	* gaphor/diagram/diagramitems.defs: 
	* gaphor/ui/diagramview.py:
	Added items for Dependency, Include, Extend and Realization.
	* gaphor/diagram/diagramitems.override: 
	* gaphor/diagram/generalization.[ch]: Rely on Relationship.
	* gaphor/diagram/model-element.c: Added rules for Dependency and
	Realization.
	* gaphor/diagram/relationship.[ch]: made it work.
	* gaphor/diagram/usecase.c: Added rules for Include and Extend.
	* gaphor/diagram/extend.c: 
	* gaphor/diagram/extend.h: 
	* gaphor/diagram/include.c: 
	* gaphor/diagram/include.h: 